dark mode fix

--- a/css/page2.css
+++ b/css/page2.css
@@ -16,6 +16,7 @@
   padding: 0.5rem;
   outline: none;
   min-width: 200px;
+  color: turquoise;
 }
 
 .instruction {
